@@ -15,6 +15,8 @@ a string litteral not terminated in a comment.
 Latex library:
 - Latex.Verbatim.pseudocode (and Melt.Verbatim.pseudocode)
 - Latex.Verbatim.trim, trim_end and trim_begin (and Melt.Verbatim.trim)
+- Bugfix: ~packages argument of commands and environment are now taken account
+even if the command is used deep inside the AST.
 
 Latex library (smaller features):
 - Latex.parbox
